--- a/docs/release-notes/v2.3.1-RELEASE-NOTES.md
+++ b/docs/release-notes/v2.3.1-RELEASE-NOTES.md
@@ -127,8 +127,8 @@ if (fileSize > maxSize) {
 
 ### Fix #6: URL Validation (SSRF Prevention)
 
-**Impact:** Vulnerable to SSRF attacks
-**Solution:** Comprehensive URL validation
+**Impact:** HTTP workers could be exploited for SSRF attacks against internal services
+**Solution:** Comprehensive URL validation with hostname parsing and private network detection
 
 ```kotlin
 if (!SecurityValidator.validateURL(config.url)) {
@@ -136,12 +136,20 @@ if (!SecurityValidator.validateURL(config.url)) {
 }
 ```
 
-**Blocks:**
-- `http://localhost/*`, `http://127.0.0.1/*`
-- `http://169.254.169.254/*` (AWS metadata)
-- `http://10.x.x.x/*`, `http://192.168.x.x/*` (private networks)
+**SSRF Protection Implementation:**
+- Extracts and validates hostname from URL
+- Blocks localhost variations (localhost, 127.0.0.1, ::1, 0.0.0.0)
+- Blocks private IPv4 networks (10.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16)
+- Blocks link-local addresses (169.254.0.0/16, including AWS metadata 169.254.169.254)
+- Blocks private IPv6 ranges (fc00::/7 ULA, fe80::/10 link-local, fd00:ec2::254)
+- Blocks local domains (*.localhost, *.local)
+- Only allows http:// and https:// schemes
 
-**Files:** `HttpUploadWorker.kt`, `HttpDownloadWorker.kt`, `HttpRequestWorker.kt`
+**Test Coverage:** 20+ test cases in `SecurityValidatorTest.kt`
+
+**Files Modified:**
+- `SecurityValidator.kt` - Core SSRF protection logic
+- `HttpUploadWorker.kt`, `HttpDownloadWorker.kt`, `HttpRequestWorker.kt` - Apply validation
 
 ---
 
@@ -305,15 +313,25 @@ NSFileManager.defaultManager.replaceItemAtURL(...)
 
 ## Security Improvements
 
-### SSRF Prevention
-- Blocks localhost, private IPs, metadata endpoints
-- Protocol validation (HTTP/HTTPS only)
-- Applied to all HTTP workers
+### SSRF Prevention (Comprehensive)
+Implemented robust SSRF protection in `SecurityValidator.kt`:
+
+**Blocked Targets:**
+- Localhost: localhost, 127.0.0.1, ::1, 0.0.0.0
+- Private IPv4: 10.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16
+- Link-local: 169.254.0.0/16 (includes AWS metadata endpoint)
+- Private IPv6: fc00::/7, fe80::/10, fd00:ec2::254
+- Local domains: *.localhost, *.local
+- Non-HTTP schemes: Only http:// and https:// allowed
+
+**Applied to:** `HttpRequestWorker`, `HttpDownloadWorker`, `HttpUploadWorker`, `HttpSyncWorker`
+
+**Test Coverage:** 20+ dedicated SSRF test cases in `SecurityValidatorTest.kt`
 
 ### Resource Protection
-- 100MB file upload limit
-- HTTP client cleanup
-- Memory optimization
+- 100MB file upload limit (prevents OOM)
+- HTTP client automatic cleanup (prevents resource leaks)
+- Memory optimization: O(n) → O(1) for queue operations
 
 ---
 
